--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,59 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddActivity"
+    android:orientation="vertical"
     android:padding="20dp">
 
-    <EditText
-        android:id="@+id/title_input"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
-        android:ems="10"
-        android:hint="Book title"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="100dp">
+        <!--    <EditText-->
+        <!--        android:id="@+id/title_input"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_marginTop="130dp"-->
+        <!--        android:ems="10"-->
+        <!--        android:hint="Book title"-->
+        <!--        android:inputType="textPersonName"-->
+        <!--        app:layout_constraintEnd_toEndOf="parent"-->
+        <!--        app:layout_constraintStart_toStartOf="parent"-->
+        <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-    <EditText
-        android:id="@+id/author_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Book author"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_input" />
+        <!--    <EditText-->
+        <!--        android:id="@+id/author_input"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_marginTop="16dp"-->
+        <!--        android:ems="10"-->
+        <!--        android:hint="Book author"-->
+        <!--        android:inputType="textPersonName"-->
+        <!--        app:layout_constraintEnd_toEndOf="parent"-->
+        <!--        app:layout_constraintStart_toStartOf="parent"-->
+        <!--        app:layout_constraintTop_toBottomOf="@+id/title_input" />-->
 
-    <EditText
-        android:id="@+id/pages_input"
-        android:layout_width="match_parent"
+        <!--    <EditText-->
+        <!--        android:id="@+id/pages_input"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_marginTop="16dp"-->
+        <!--        android:ems="10"-->
+        <!--        android:hint="Number of pages"-->
+        <!--        android:inputType="number"-->
+        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--        app:layout_constraintEnd_toEndOf="parent"-->
+        <!--        app:layout_constraintStart_toStartOf="parent"-->
+        <!--        app:layout_constraintTop_toBottomOf="@+id/author_input"-->
+        <!--        app:layout_constraintVertical_bias="0.021" />-->
+
+        <include layout="@layout/add_cam"></include>
+    </LinearLayout>
+    <Button
+        android:id="@+id/add_Pic"
+        android:layout_width="90dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Number of pages"
-        android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/author_input"
-        app:layout_constraintVertical_bias="0.021" />
+        android:layout_marginLeft="5dp"
+        android:backgroundTint="@color/black"
+        android:text="add_more"
+        android:textSize="10dp"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:textColor="@color/cardview_dark_background"/>
 
     <Button
         android:id="@+id/add_button"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginTop="32dp"
-        android:text="Add"
+        android:text="@string/add"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@+id/pages_input"
         tools:layout_editor_absoluteX="47dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.appcompat.widget.LinearLayoutCompat>
